--- a/Bot Application/Bot Application.csproj
+++ b/Bot Application/Bot Application.csproj
@@ -125,6 +125,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="OpenWeatherMap\WeatherClient.cs" />
+    <Compile Include="OpenWeatherMap\WeatherParam.cs" />
     <Compile Include="OpenWeatherMap\WeatherRecord.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils.cs" />
